# ocaml-htmx

./: .gitignore  dune-project
lib/dom/: dune
lib/dom/models/: contact.ml  contact.mli  dune
lib/dom/validators/: contact_validator.ml  contact_validator.mli  dune
lib/infrastructure/controllers/: create_contact.ml  delete_contact.ml  dune  edit_contact.ml  list_contacts.ml  redirect_contacts.ml  view_contact.ml  view_email.ml
lib/infrastructure/migrations/: dune  init.ml
lib/infrastructure/repositories/: ContactRepository.ml  dune
lib/infrastructure/templates/: detail.ml  dune  edit.ml  index.ml  layout.ml  new.ml
