(lang dune 3.10)

(name ocaml-htmx)

(generate_opam_files true)

(source
 (github renatillas/ocaml-htmx))

(authors "Renatillas")

(maintainers "Renatillas")

(package
 (name ocaml-htmx)
 (synopsis "Just a web app following the htmx book tutorial")
 (depends ocaml dune)
 )

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
